Fix fade timings and add overflow: hidden.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,6 +24,7 @@ h1 {
     font-family: 'Overpass', 'courier new', sans-serif;
     text-align: center;
     color: white;
+    overflow: hidden;
 }
 
 .bio {
@@ -31,7 +32,8 @@ h1 {
     margin: 10px;
 }
 
-#hello {
+#hello1,
+#hello2 {
     font-size: 50px;
     margin: 5px;
 }
@@ -51,10 +53,8 @@ a {
     color: #03A9F4;
 }
 
-#title-header {
-    opacity: 0;
-}
-
+#hello1,
+#hello2,
 #body-header {
     opacity: 0;
 }
